==> OpenSiFli/SiFli-SDK/customer/boards/eh-lb555/drv_io.c <==
#include "board.h"
#include "string.h"
#include "rtconfig.h"
    #include "drv_common.h"
    #include "drv_psram.h"
    #include "drv_flash.h"
    #include "log.h"
#include "drv_io.h"
#include "bf0_sys_cfg.h"
    #include "bf0_hal_dsi.h"
    #include "pmic_controller.h"
    #define DEBUG_PRINTF(...)   LOG_I(__VA_ARGS__)
    #define DEBUG_PRINTF(...)
    #define LXT_LP_CYCLE 200
    #define RT_ASSERT(expr)
#define LCD_BOARD_POWER_PIN     (11)      // GPIO_B11
#define LCD_RESET_PIN           (17)      // GPIO_B17
#define TP_RESET_PIN            (53)       // GPIO_A53
#define QSPI_POWER_PIN          (58)      // GPIO_A58

void HAL_PreInit(void)
{
#ifdef SOC_BF0_HCPU
    // To avoid somebody cancel request.
    HAL_HPAON_EnableXT48();

    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_UART1, RCC_CLK_USART_HXT48);

#ifdef  BSP_USING_UART4
    // Assume LCPU is not in low power mode.
    RT_ASSERT(HAL_HPAON_IS_LP_ACTIVE());
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART4, RCC_CLK_USART_HXT48);
#endif

    if (PM_STANDBY_BOOT != SystemPowerOnModeGet()) // Except Standby mode, all other mode need to re-init
    {
        // Halt LCPU first to avoid LCPU in running state
        HAL_HPAON_WakeCore(CORE_ID_LCPU);
        HAL_RCC_Reset_and_Halt_LCPU(1);
#ifdef BSP_USING_SPI_FLASH
        {
            // if not define EFUSE CONFIG or efuse configure read fail, check flash otp configure
            BSP_System_Config();
        }
#endif

#ifdef CHECK_ADC_BEFORE_START
        if (1)
        {
            HAL_LCPU_CONFIG_ADC_T cfg;
            float off, rat;
            uint32_t vol1, vol2;
            int adc_range;
            int res = 0;
            uint16_t len = (uint16_t)sizeof(HAL_LCPU_CONFIG_ADC_T);
            if (HAL_LCPU_CONFIG_get(HAL_LCPU_CONFIG_ADC_CALIBRATION, (uint8_t *)&cfg, &len) == 0)
            {
                if (cfg.vol10 == 0 || cfg.vol25 == 0) // not valid paramter
                {
                    //LOG_I("Get ADC configure invalid : %d, %d\n", cfg.vol10, cfg.vol25);
                }
                else
                {
                    if ((cfg.vol10 & (1 << 15)) && (cfg.vol25 & (1 << 15))) // small range, use X1 mode
                    {
                        cfg.vol10 &= 0x7fff;
                        cfg.vol25 &= 0x7fff;
                        vol1 = 300;
                        vol2 = 800;
                        adc_range = 1;
                    }
                    else // big range , use X3 mode
                    {
                        vol1 = 1000;
                        vol2 = 2500;
                        adc_range = 0;
                    }
                    res = boot_adc_calibration(cfg.vol10, cfg.vol25, vol1, vol2, &off, &rat);
                    if (adc_range == 0) // big range ratio need change to small range ratio
                        rat /= 3;

                }
            }
            if (res == 0)   // get cal fail
            {
                off = 199;
                rat = 3930 / 3; // TODO: 3930 is offset for x3 mode , need /3 for x1 mode
            }
            int vol = get_boot_voltage(off, rat);   // based on 0.001 mv
            int mul = (1000 + 220) / 220;   // TODO: fix it as real board configure.
            int threshold = 3300; // TODO:  boot up voltage threshold
            while (vol * mul < threshold * 1000)
            {
                HAL_Delay(1000 * 60);   // 60 sec
                vol = get_boot_voltage(off, rat);
            }
        }
#endif //CHECK_ADC_BEFORE_START
        HAL_PMU_EnableDLL(1);
        // disable it when ATE?
        HAL_PMU_SWITCH_VRET_LOWER();

        HAL_HPAON_StartGTimer();
#ifdef LXT_DISABLE
        HAL_PMU_LpCLockSelect(PMU_LPCLK_RC10);
        MODIFY_REG(hwp_pmuc->LRC_CR, PMUC_LRC_CR_CMPBM1_Msk, 3 << PMUC_LRC_CR_CMPBM1_Pos);
        MODIFY_REG(hwp_pmuc->LRC_CR, PMUC_LRC_CR_CMPBM2_Msk, 1 << PMUC_LRC_CR_CMPBM2_Pos);
#else

        HAL_PMU_LpCLockSelect(PMU_LPCLK_XT32);
#endif
        //HAL_PMU_SET_HPSYS_LDO_VREF(0xB);

        HAL_PMU_SET_HPSYS_LDO_VREF2(0);

        /* Configure in LCPU. */
        HAL_LPAON_EnableXT48();

        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HXT48);

        HAL_PMU_EnableBuck2();
        HAL_PMU_SELECT_LPSYS_PWR(PMU_LPSYS_PSW_BUCK2);
        HAL_PMU_DISABLE_LPSYS_LDO();
#if 1
        HAL_RCC_LCPU_SetDiv(1, 1, 3);

        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART3, RCC_CLK_USART_HXT48);
        HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART5, RCC_CLK_USART_HXT48);
        HAL_RCC_LCPU_enable2(LPSYS_RCC_ENR2_QSPI4, 1);
#endif
        if (HAL_PMU_LXT_DISABLED())
        {
            LRC_init();
        }
    }
#ifdef BSP_USING_SPI_CAMERA
    HAL_RCC_HCPU_SetDiv(1, 1, 5);
#else
    HAL_RCC_HCPU_SetDiv(1, 2, 5);
#endif
    flash1_div = 1;
    flash2_div = 4;
    flash3_div = 4;
    //HAL_QSPI_ENABLE_WDT();

    HAL_RCC_HCPU_EnableDLL2(96000000);

    // delayed version of Rx sample en set to 0x6
    // delayed version of Rx clock set to 0x6
    //hwp_qspi1->MISCR = 0x36;
    HAL_QSPI_SET_RXDELAY(0, 6, 6);
    HAL_QSPI_SET_RXDELAY(1, 6, 6);
    HAL_QSPI_SET_RXDELAY(2, 6, 6);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_FLASH1, RCC_CLK_SRC_DLL2);

    //HAL_RCC_HCPU_EnableDLL3(144000000);
    //HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_FLASH3, RCC_CLK_SRC_DLL3);

    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HXT48);
    HAL_RCC_HCPU_EnableDLL1(240000000);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_DLL1);
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_FLASH2, RCC_CLK_MOD_SYS);

    // Reset sysclk used by HAL_Delay_us
    HAL_Delay_us(0);

    /* Init the low level hardware */
    HAL_MspInit();


#if defined (BSP_USING_PSRAM)
    HAL_RCC_HCPU_ClockSelect(RCC_CLK_MOD_PSRAM, RCC_CLK_PSRAM_SYSCLK);
    bsp_psramc_init();
#endif


#ifdef PMIC_CTRL_ENABLE
    BSP_PMIC_Init();
#endif


#elif defined(SOC_BF0_LCPU)
    HAL_LPAON_EnableXT48();

    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_SYS, RCC_SYSCLK_HXT48);
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART3, RCC_CLK_USART_HXT48);
    HAL_RCC_LCPU_ClockSelect(RCC_CLK_MOD_UART5, RCC_CLK_USART_HXT48);

    HAL_RCC_LCPU_SetDiv(1, 1, 3);
    HAL_RCC_LCPU_enable2(LPSYS_RCC_ENR2_QSPI4, 1);

    if (HAL_PMU_LXT_DISABLED() && PM_STANDBY_BOOT != SystemPowerOnModeGet())
    {
        HAL_RC_CAL_update_reference_cycle_on_48M(LXT_LP_CYCLE);
    }

    HAL_MspInit();
#endif
}

void BSP_LCD_PowerDown(void)
{
#if defined(TOUCH_WAKEUP_SUPPORT)
    if (drv_tp_get_wakeup_check_enable())
    {
        return;
    }
#endif

    BSP_LCD_TP_Power(0, 1);
    BSP_GPIO_Set(LCD_BOARD_POWER_PIN, 0, 0);

    BSP_LCD_Reset(0);
}

void BSP_TP_PowerUp(void)
{
    BSP_LCD_TP_Power(1, 0);

    //BSP_GPIO_Set(TP_EN_PIN, 1, 1);  //TP_EN
#if 0
    HAL_PIN_SetMode(PAD_PA00, 1, PIN_DIGITAL_OUTPUT_NORMAL);
    HAL_PIN_Set(PAD_PA00, GPIO_A0, PIN_NOPULL, 1);
    BSP_GPIO_Set(TP_RESET_PIN, 1, 1);  //TP_RST
#else
    BSP_GPIO_Set(TP_RESET_PIN, 1, 1);  //TP_RST
#endif

}

void BSP_TP_PowerDown(void)
{
#if defined(TOUCH_WAKEUP_SUPPORT)
    if (drv_tp_get_wakeup_check_enable())
    {
        return;
    }
#endif

    BSP_LCD_TP_Power(0, 0);

    //BSP_GPIO_Set(TP_RESET_PIN, 0, 1);
#if 0
    HAL_GPIO_DeInit(hwp_gpio1, TP_RESET_PIN);
    HAL_PIN_Set(PAD_PA00, GPIO_A0, PIN_NOPULL, 1);
    HAL_PIN_SetMode(PAD_PA00, 1, PIN_ANALOG_INPUT);
#else
    BSP_GPIO_Set(TP_RESET_PIN, 0, 1);
#endif
    //BSP_GPIO_Set(TP_EN_PIN, 0, 1);
}

void BSP_QSPI_PowerUp(void)
{
    BSP_GPIO_Set(QSPI_POWER_PIN, 1, 1);
//    HAL_PIN_Set(PAD_PA60, QSPI2_CLK, PIN_NOPULL, 1);
    HAL_GPIO_DeInit(hwp_gpio1, 49);
#ifdef BSP_ENABLE_QSPI3
    HAL_PIN_Set(PAD_PA49, QSPI3_DIO1, PIN_PULLDOWN, 1);
#else
    HAL_PIN_Set(PAD_PA49, SD2_DIO1, PIN_PULLUP, 1);
#endif
    HAL_GPIO_DeInit(hwp_gpio1, 61);
    HAL_PIN_Set(PAD_PA61, QSPI2_CS, PIN_NOPULL, 1);

    HAL_Delay_us(0);
#if 0 //def BSP_ENABLE_QSPI1
    FLASH_HandleTypeDef hflash1;
    hflash1.Instance = FLASH1;
    HAL_FLASH_RELEASE_DPD(&hflash1);
#endif

#ifdef BSP_ENABLE_QSPI2
#if (BSP_QSPI2_MODE == SPI_MODE_NOR)

    FLASH_HandleTypeDef hflash2;
    hflash2.Instance = FLASH2;
#ifdef BSP_QSPI2_DUAL_CHIP
    int dual = HAL_FLASH_GET_DUAL_MODE(&hflash2);
    HAL_FLASH_SET_DUAL_MODE(&hflash2, 1);
#endif //BSP_QSPI2_DUAL_CHIP

    HAL_FLASH_RELEASE_DPD(&hflash2);

#ifdef BSP_QSPI2_DUAL_CHIP
    HAL_FLASH_SET_DUAL_MODE(&hflash2, dual);
#endif  //BSP_QSPI2_DUAL_CHIP
#endif  //BSP_QSPI2_MODE
#endif  //BSP_ENABLE_QSPI2

    // wait tRES1
    HAL_Delay_us(8);
}

void BSP_QSPI_PowerDown(void)
{
#ifdef BSP_ENABLE_QSPI2
    FLASH_HandleTypeDef hflash2;
    hflash2.Instance = FLASH2;
    HAL_FLASH_DEEP_PWRDOWN(&hflash2);
#endif
#if 0 //def BSP_ENABLE_QSPI1
    FLASH_HandleTypeDef hflash1;
    hflash1.Instance = FLASH1;
    HAL_FLASH_DEEP_PWRDOWN(&hflash1);
#endif
    // wait tDP
    HAL_Delay_us(3);

//    HAL_PIN_Set(PAD_PA60, GPIO_A60, PIN_NOPULL, 1);
//    BSP_GPIO_Set(QSPI2_CLK_PIN, 0, 1);
//    BSP_GPIO_Set(QSPI_POWER_PIN, 0, 1);
#ifndef BSP_USING_EXT_PSRAM
    HAL_PIN_Set(PAD_PA37, GPIO_A37, PIN_NOPULL, 1);
    BSP_GPIO_Set(37, 1, 1);
#endif
    HAL_PIN_Set(PAD_PA49, GPIO_A49, PIN_NOPULL, 1);
    BSP_GPIO_Set(49, 1, 1);
    HAL_PIN_Set(PAD_PA61, GPIO_A61, PIN_NOPULL, 1);
    BSP_GPIO_Set(61, 1, 1);
}
